prod_canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary
  namespace: prod-canary
  labels:
    app: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
      - name: canary
        image: mirrorgooglecontainers/echoserver:1.10
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: canary
  namespace: prod-canary
  labels:
    app: canary
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: canary
