production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production
  namespace: prod-canary
  labels:
    app: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: production
  template:
    metadata:
      labels:
        app: production
    spec:
      containers:
      - name: production
        image: mirrorgooglecontainers/echoserver:1.10
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: production
  namespace: prod-canary
  labels:
    app: production
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: production
